--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx ts-node index.ts"
+    "start": "npx ts-node check_availability.ts"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +25,6 @@
     "@types/nodemailer": "^6.4.4",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
-    "node-cron": "^3.0.0",
     "nodemailer": "^6.7.4"
   }
 }
