--- a/package.json
+++ b/package.json
@@ -15,16 +15,14 @@
   "engines": {
     "node": "18.0.0"
   },
-  "devDependencies": {
-    "@types/node": "^17.0.30",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
-  },
   "dependencies": {
     "@types/node-cron": "^3.0.1",
     "@types/nodemailer": "^6.4.4",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
-    "nodemailer": "^6.7.4"
+    "nodemailer": "^6.7.4",
+    "@types/node": "^17.0.30",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
