--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node check_availability.ts"
+    "check-availability": "ts-node check_availability.ts"
   },
   "keywords": [],
   "author": "",
