--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "check-availability": "ts-node check_availability.ts"
+    "check-availability": "node check_availability.js"
   },
   "keywords": [],
   "author": "",
@@ -24,5 +24,6 @@
     "@types/node": "^17.0.30",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
-  }
+  },
+  "type": "module"
 }
